# CMakeLists.txt

cmake_minimum_required(VERSION 3.20)

enable_testing()

# 默认Release配置
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

# 设置可执行文件、库的输出路径
set(GENERATE_DIR ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})

set(BIN_DIR ${GENERATE_DIR}/bin)
set(LIB_DIR ${GENERATE_DIR}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIB_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_DIR})

# 针对Debug和Release配置不同的输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${LIB_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${LIB_DIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${LIB_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${LIB_DIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RelWithDebInfo ${BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RelWithDebInfo ${LIB_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RelWithDebInfo ${LIB_DIR})



project(DragonRenderer 
    VERSION 1.0
    LANGUAGES CXX
)

add_subdirectory(thirdparts)

add_subdirectory(src)

add_subdirectory(test)

